doing some changes for font-sizes, font-weight, clamp , min max

--- a/packages/classicjerusalem/src/styles/style.css
+++ b/packages/classicjerusalem/src/styles/style.css
@@ -1,10 +1,5 @@
-
-.image-gallery-content .image-gallery-slide .image-gallery-image {
-
-
-
-}
-
-.image-gallery-slide .image-gallery-image {
-
-}
+.whats-app-icon {
+    color: "white";
+    size: "2rem";
+    
+} 
