--- a/packages/classicjerusalem/src/styles/style.css
+++ b/packages/classicjerusalem/src/styles/style.css
@@ -1,4 +1,35 @@
-.whats-app-icon {
-    color: "white";
-    size: "2rem";  
-} 
+.react-multiple-carousel__arrow--right::before{content:"»"}
+.react-multiple-carousel__arrow--left::before{content:"«"}
+
+.react-datetime-picker {
+    display: inline-flex;
+    position: relative;
+  
+    /*new starts*/
+    @media (min-width: 768px){
+      margin-right: 2rem;
+    }
+    /*new ends*/
+}
+
+.react-datetime-picker__wrapper {
+    display: flex;
+    /* flex-grow: 1; */
+    /* flex-shrink: 0; */
+    border: thin solid var(--golden-color);;
+    
+    /*new*/
+        padding:10px;
+        margin:10px 0; 
+        border: 2px solid var(--golden-color);
+        /* box-shadow:0 0 15px 4px rgba(0,0,0,0.06); */
+        border-radius:10px;
+        width:100%;
+        font-family:inherit;
+        font-size: inherit;
+    /*end new*/
+}
+
+.react-datetime-picker__inputGroup__input:invalid {
+    background-color: transparent;
+}
